--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,4 +23,26 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+
+}
+
+.header{
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.header img{
+width:fit-content;
+height:fit-content;
+}
+
+.image-slider-container {
+  margin:0px 0px;
+  padding:0px 0px;
+  width: 86vw;
+}
+
+.image-slider-container .slick-prev:before,
+.image-slider-container .slick-next:before {
+  color: black;
 }
