--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -39,24 +39,19 @@ header {
 
 .wrapper {
   width: 94%;
-  max-width: 1200px;
   display: flex;
   justify-content: space-between;
+  margin: 125px 0;
 }
 
-.main {
-  width: calc(100% - 300px);
-}
 .sidebar {
   margin-top: 30px;
-  position: sticky;
-  width: 280px;
+  width: 200px;
 }
-.widget + .widget {
+.widget{
   margin-top: 20px;
-}
-.widget--sticky {
-  top: 20px;
+  position: sticky;
+  
 }
 
 /* .image-slider-container {
